src/type_atoms/adt/snapshots/syn_state_machine__type_atoms__adt__sum__tests__concat_idents! (parse it_matches_highest_priority).snap
---
source: src/type_atoms/adt/sum.rs
expression: "crate::parse::<Sum5<(P, P, P, P, P), (P, P, P, P), (P, P, P), (P, P),\n        (P,)>>(q.clone())"
---
Ok(
    V1(
        (
            Punct {
                char: '.',
                spacing: Joint,
            },
            Punct {
                char: '.',
                spacing: Joint,
            },
            Punct {
                char: '.',
                spacing: Alone,
            },
            Punct {
                char: '.',
                spacing: Alone,
            },
        ),
    ),
)
