src/type_atoms/adt/snapshots/syn_state_machine__type_atoms__adt__sum__tests__concat_idents! (parse it_matches_sum_2_0).snap
---
source: src/type_atoms/adt/sum.rs
expression: "crate::parse::<Sum2<Ident, Punct>>(q.clone())"
---
Ok(
    V0(
        Ident(
            hello,
        ),
    ),
)
