src/type_atoms/adt/snapshots/syn_state_machine__type_atoms__adt__sum__tests__concat_idents! (peek it_matches_highest_priority).snap
---
source: src/type_atoms/adt/sum.rs
expression: "crate::test_peek::<Sum5<(P, P, P, P, P), (P, P, P, P), (P, P, P), (P, P),\n        (P,)>>(q.clone())"
---
Some(
    4,
)
