src/type_atoms/adt/snapshots/syn_state_machine__type_atoms__adt__sum__tests__concat_idents! (peek it_matches_sum_2_1).snap
---
source: src/type_atoms/adt/sum.rs
expression: "crate::test_peek::<Sum2<Ident, Punct>>(q.clone())"
---
Some(
    1,
)
