src/type_atoms/adt/snapshots/syn_state_machine__type_atoms__adt__sum__tests__it_matches_highest_priority.snap
---
source: src/type_atoms/adt/sum.rs
expression: "(insta_match_test!(+ parse\n        Sum5<(P, P, P, P, P), (P, P, P, P), (P, P, P), (P, P), (P,)> : ....),\n    insta_match_test!(* peek\n        Sum5<(P, P, P, P, P), (P, P, P, P), (P, P, P), (P, P), (P,)> : ....))"
---
(
    Ok(
        V1(
            (
                Punct {
                    char: '.',
                    spacing: Joint,
                },
                Punct {
                    char: '.',
                    spacing: Joint,
                },
                Punct {
                    char: '.',
                    spacing: Alone,
                },
                Punct {
                    char: '.',
                    spacing: Alone,
                },
            ),
        ),
    ),
    Some(
        4,
    ),
)
